<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_shape"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/objective_dialog_title"
        android:textSize="@dimen/objective_dialog_title_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/objective_dialog_message"/>

    <EditText
        android:id="@+id/dialogEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:singleLine="true"
        android:background="@color/white_color"
        android:hint="@string/objective_dialog_input_hint"
        android:padding="7dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="2dp"
        android:background="@drawable/dialog_button_layout_shape">

        <Button
            android:id="@+id/dialogCancelButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:text="@string/objective_dialog_cancel"
            android:textColor="@color/blue_color"
            android:background="@drawable/bottom_left_corner_rounded"/>

        <Button
            android:id="@+id/dialogOkButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/objective_dialog_ok"
            android:textColor="@color/blue_color"
            android:background="@drawable/bottom_right_corner_rounded"/>

    </LinearLayout>
</LinearLayout>