<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="jp.co.efusion.fragments.ThemeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fragment_back_color">

        <TextView
            android:id="@+id/learningObjectiveTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/learning_objective_back_color"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white_color" />

        <!-- Statistics View-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/statistics_back_color"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:paddingBottom="2dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/learning_day_text"
                    android:textColor="@color/white_color"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/learning_hour_text"
                    android:textColor="@color/white_color"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/question_tried_text"
                    android:textColor="@color/white_color"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/learningDayTextview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/statistics_value_size"
                    android:textColor="@color/white_color"/>
                <TextView
                    android:id="@+id/learningHourTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/statistics_value_size"
                    android:textColor="@color/white_color"/>
                <TextView
                    android:id="@+id/questionTriedTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/statistics_value_size"
                    android:textColor="@color/white_color"/>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Replace this view with Admob View -->
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>

            <!-- Theme List View-->
            <ListView
                android:id="@+id/themeListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/adView"
                android:divider="@null"/>
        </RelativeLayout>
        

    </LinearLayout>
</FrameLayout>